--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pusher": "^2.2.0",
     "pusher-js": "^4.4.0",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
