--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "moment": "^2.24.0",
     "next": "^9.1.1",
     "path-match": "^1.2.4",
+    "pg": "^7.12.0",
+    "pg-copy-streams": "^2.2.2",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
