--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pusher-js": "^5.0.2",
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
+    "react-awesome-spinners": "^1.3.1",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.11.0",
     "react-ga": "^2.7.0",
