--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"prop-types": "^15.7.2",
 		"pusher-js": "^5.0.2",
 		"query-string": "^6.9.0",
+		"randomcolor": "^0.5.4",
 		"react": "^16.12.0",
 		"react-autosuggest": "^9.4.3",
 		"react-cookie": "^4.0.1",
