--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"date-fns": "^1.30.1",
 		"disqus-react": "^1.0.7",
 		"lodash": "^4.17.15",
+		"lodash.debounce": "^4.0.8",
 		"luxon": "^1.21.3",
 		"moment": "^2.24.0",
 		"next": "^9.1.4",
@@ -42,6 +43,7 @@
 		"randomcolor": "^0.5.4",
 		"react": "^16.12.0",
 		"react-autosuggest": "^9.4.3",
+		"react-awesome-spinners": "^1.3.1",
 		"react-cookie": "^4.0.1",
 		"react-dom": "^16.11.0",
 		"react-ga": "^2.7.0",
