--- a/now.json
+++ b/now.json
@@ -57,6 +57,10 @@
 		{
 			"src": "/profile/(?<name>[^/]+)$",
 			"dest": "/profile?name=$name"
+		},
+		{
+			"src": "/calendar/(?<year>[^/]+)?/(?<month>[^/]+)$",
+			"dest": "/calendar?year=$year&month=$month"
 		}
 	]
 }
