--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"contentful": "^7.10.0",
 		"date-fns": "^1.30.1",
 		"disqus-react": "^1.0.7",
+		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.15",
 		"lodash.debounce": "^4.0.8",
 		"luxon": "^1.21.3",
