--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"react-markdown": "^4.2.2",
 		"react-quill": "^2.0.0-beta.2",
 		"react-social": "^1.10.0",
+		"react-table": "^7.0.0-rc.16",
 		"react-timeago": "^4.4.0",
 		"react-twitter-embed": "^2.0.8",
 		"recompose": "^0.30.0",
