--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@zeit/next-source-maps": "0.0.3",
 		"auth0": "^2.27.1",
 		"axios": "^0.19.2",
+		"array-sort": "^1.0.0",
 		"babel-plugin-module-resolver": "^3.2.0",
 		"babel-plugin-styled-components": "^1.10.6",
 		"babel-plugin-wrap-in-js": "^1.1.1",
