--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"yup": "^0.28.1"
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-optional-chaining": "^7.9.0",
 		"ava": "^2.4.0",
 		"eslint": "^6.5.1",
 		"eslint-config-xo-react": "^0.20.0",
