--- a/now.json
+++ b/now.json
@@ -73,7 +73,7 @@
 		},
 		{
 			"src": "/profile/Stuart%20Birnie",
-			"dest": "profile/Stuart%20Birnie%20(Hippy)",
+			"dest": "/profile/Stuart%20Birnie%20(Hippy)",
 			"status": 301
 		},
 		{
