--- a/now.json
+++ b/now.json
@@ -65,12 +65,12 @@
 		},
 		{
 			"src": "/profile/Ales%20Zavoral",
-			"dest": "/profile/Aleš%20Zavoralt",
+			"dest": "/profile/Aleš%20Zavoral",
 			"status": 301
 		},
 		{
 			"src": "/profile/Alex%20Zavoral",
-			"dest": "/profile/Aleš%20Zavoralt",
+			"dest": "/profile/Aleš%20Zavoral",
 			"status": 301
 		},
 		{
