--- a/now.json
+++ b/now.json
@@ -9,6 +9,15 @@
 	],
 	"routes": [
 		{
+			"src": "/api/(.*)",
+			"headers": {
+				"Access-Control-Allow-Origin": "*",
+				"Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+				"Access-Control-Allow-Credentials": "true"
+			},
+			"continue": true
+		},
+		{
 			"src": "/profile/Zoe%20Chauderlot",
 			"dest": "/profile/Zoé%20Chauderlot",
 			"status": 301
