--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"cloudinary-react": "^1.3.0",
 		"contentful": "^7.10.0",
 		"d3": "^5.16.0",
+		"d3-legend": "^1.0.0",
 		"date-fns": "^1.30.1",
 		"disqus-react": "^1.0.7",
 		"formik": "^2.1.2",
