--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"recompose": "^0.30.0",
 		"remark-breaks": "^1.0.3",
 		"remark-shortcodes": "^0.2.1",
+		"scroll-behavior-polyfill": "^2.0.13",
 		"slugify": "^1.3.5",
 		"styled-components": "^5.0.1",
 		"styled-components-tachyons": "^0.0.5",
