--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
 		"recompose": "^0.30.0",
 		"remark-breaks": "^1.0.3",
 		"remark-shortcodes": "^0.2.1",
-		"scroll-behavior-polyfill": "^2.0.13",
 		"slugify": "^1.3.5",
+		"smoothscroll-polyfill": "^0.4.4",
 		"styled-components": "^5.0.1",
 		"styled-components-tachyons": "^0.0.5",
 		"tachyons": "^4.11.1",
