add new profile redirect

--- a/now.json
+++ b/now.json
@@ -23,8 +23,8 @@
 			"status": 301
 		},
 		{
-			"src": "/profile/Zoe%20Chauderlot",
-			"dest": "/profile/Zoé%20Chauderlot",
+			"src": "/profile/MARKUS%20ZIMMERMANN",
+			"dest": "/profile/Markus%20Zimmermann",
 			"status": 301
 		},
 		{
