--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"react-instagram-embed": "^1.5.0",
 		"react-mailchimp-subscribe": "^2.1.0",
 		"react-markdown": "^4.2.2",
-		"react-quill": "^1.3.5",
+		"react-quill": "^2.0.0-beta.2",
 		"react-social": "^1.10.0",
 		"react-timeago": "^4.4.0",
 		"react-twitter-embed": "^2.0.8",
