--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
 	"version": 2,
-	"alias": ["www.dotwatcher.cc", "dotwatcher.cc"],
-	"routes": [
-		{
-			"src": "/api/(.*)",
-			"headers": {
-				"Access-Control-Allow-Origin": "*",
-				"Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
-				"Access-Control-Allow-Credentials": "true"
-			},
-			"continue": true
-		}
-	]
+	"alias": ["www.dotwatcher.cc", "dotwatcher.cc"]
 }
