--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"d3": "^5.16.0",
 		"d3-legend": "^1.0.0",
 		"date-fns": "^1.30.1",
+		"debounce": "^1.2.0",
 		"disqus-react": "^1.0.7",
 		"formik": "^2.1.2",
 		"isomorphic-unfetch": "^3.0.0",
