--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"disqus-react": "^1.0.7",
 		"formik": "^2.1.2",
 		"graphql": "^15.4.0",
+		"hamburgers": "^1.1.3",
 		"isomorphic-unfetch": "^3.0.0",
 		"js-cookie": "^2.2.1",
 		"lodash": "^4.17.15",
