--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"path-match": "^1.2.4",
 		"pg": "^7.12.0",
 		"pg-copy-streams": "^2.2.2",
+		"pg-native": "^3.0.0",
 		"postcss-easy-import": "^3.0.0",
 		"postcss-loader": "^3.0.0",
 		"prop-types": "^15.7.2",
