--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lint": "xo"
 	},
 	"engines": {
-		"node": ">12.15.0"
+		"node": ">=12.15.0"
 	},
 	"xo": {
 		"extends": "xo-react"
@@ -71,11 +71,11 @@
 		"pusher-js": "^5.0.2",
 		"query-string": "^6.9.0",
 		"randomcolor": "^0.5.4",
-		"react": "^16.12.0",
+		"react": "^17.0.1",
 		"react-autosuggest": "^9.4.3",
 		"react-awesome-spinners": "^1.3.1",
 		"react-cookie": "^4.0.1",
-		"react-dom": "^16.11.0",
+		"react-dom": "^17.0.1",
 		"react-ga": "^2.7.0",
 		"react-icons": "^3.8.0",
 		"react-instagram-embed": "^2.0.0",
