reject ssl, add webpack

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"styled-components": "^5.2.1",
 		"styled-components-tachyons": "^0.0.5",
 		"tachyons": "^4.11.1",
+		"webpack": "^4.41.1",
 		"yup": "^0.28.5"
 	},
 	"devDependencies": {
