--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@contentful/rich-text-html-renderer": "^14.1.2",
 		"@contentful/rich-text-react-renderer": "^13.4.0",
 		"@contentful/rich-text-types": "^14.1.2",
+		"@dotwatcher/utils": "^0.5.1",
 		"@sentry/browser": "^5.15.5",
 		"@sentry/react": "^6.2.5",
 		"@sentry/tracing": "^6.2.5",
@@ -84,9 +85,10 @@
 		"react-markdown": "^5.0.3",
 		"react-quill": "^2.0.0-beta.2",
 		"react-social": "^1.10.0",
-		"react-table": "^7.0.0-rc.16",
+		"react-table": "^7.6.3",
 		"react-timeago": "^4.4.0",
 		"react-twitter-embed": "^2.0.8",
+		"react-use": "^17.2.3",
 		"recompose": "^0.30.0",
 		"remark-breaks": "^1.0.3",
 		"remark-shortcodes": "^0.2.1",
