--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"build": "next build",
 		"now-build": "next build",
 		"start": "next start",
-		"lint": "xo"
+		"lint": "xo",
+		"prebuild": "rm ./public/sitemap.xml",
+		"postbuild": "next-sitemap"
 	},
 	"engines": {
 		"node": ">=12.15.0"
@@ -62,7 +64,7 @@
 		"lodash.debounce": "^4.0.8",
 		"luxon": "^1.21.3",
 		"moment": "^2.24.0",
-		"next": "^10.0.4",
+		"next": "^10.2.0",
 		"path-match": "^1.2.4",
 		"pg": "^8.5.1",
 		"pg-copy-streams": "^2.2.2",
@@ -106,6 +108,8 @@
 		"eslint": "^6.5.1",
 		"eslint-config-xo-react": "^0.20.0",
 		"eslint-plugin-react": "^7.16.0",
+		"next-sitemap": "^1.6.25",
+		"sitemap": "^6.4.0",
 		"xo": "^0.25.3"
 	}
 }
