--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"contributors": [
 		{
 			"name": "Alex Windett",
-			"email": "windettalex@gmail.com"
+			"email": "alex@windett.co.uk"
 		},
 		{
 			"name": "Jon Heslop",
@@ -45,7 +45,7 @@
 		"auth0": "^2.27.1",
 		"axios": "^0.19.2",
 		"babel-plugin-module-resolver": "^3.2.0",
-		"babel-plugin-styled-components": "^1.10.6",
+		"babel-plugin-styled-components": "^1.12.0",
 		"babel-plugin-wrap-in-js": "^1.1.1",
 		"classnames": "^2.2.6",
 		"cloudinary-react": "^1.3.0",
@@ -96,7 +96,7 @@
 		"remark-shortcodes": "^0.2.1",
 		"slugify": "^1.3.5",
 		"smoothscroll-polyfill": "^0.4.4",
-		"styled-components": "^5.2.1",
+		"styled-components": "^5.2.3",
 		"styled-components-tachyons": "^0.0.5",
 		"tachyons": "^4.11.1",
 		"webpack": "^4.41.1",
