--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,8 @@ test-data
 
 /public/robots.txt
 /public/sitemap.xml
+
+/public/sw.js
+/public/sw.js.map
+/public/workbox-*.js
+/public/workbox-*.js.map
