--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"luxon": "^1.21.3",
 		"moment": "^2.24.0",
 		"next": "^10.2.0",
+		"next-pwa": "^5.2.16",
 		"path-match": "^1.2.4",
 		"pg": "^8.5.1",
 		"pg-copy-streams": "^2.2.2",
