--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@contentful/rich-text-react-renderer": "^13.4.0",
 		"@contentful/rich-text-types": "^14.1.2",
 		"@dotwatcher/utils": "^0.5.1",
+		"@mailchimp/mailchimp_marketing": "^3.0.48",
 		"@sentry/browser": "^6.3.0",
 		"@sentry/react": "^6.3.0",
 		"@sentry/tracing": "^6.3.0",
@@ -84,7 +85,7 @@
 		"react-ga": "^2.7.0",
 		"react-icons": "^3.8.0",
 		"react-instagram-embed": "^2.0.0",
-		"react-mailchimp-subscribe": "^2.1.0",
+		"react-mailchimp-subscribe": "^2.1.3",
 		"react-markdown": "^5.0.3",
 		"react-quill": "^2.0.0-beta.2",
 		"react-social": "^1.10.0",
